OSGi exercise 8 - Added also the repository version as a test.

--- a/sampleproject/content/src/main/content/jcr_root/apps/netcentric/sampleproject/components/repository/repository.html
+++ b/sampleproject/content/src/main/content/jcr_root/apps/netcentric/sampleproject/components/repository/repository.html
@@ -1,5 +1,6 @@
 <html data-sly-use.repository="biz.netcentric.cq.training.ui.RepositoryComponent">
     <body>
         <p>Repository name: ${repository.repositoryName}</p>
+        <p>Repository version: ${repository.repositoryVersion}</p>
     </body>
 </html>
